--- a/reportMaster2/3-Biblio.tex
+++ b/reportMaster2/3-Biblio.tex
@@ -20,5 +20,6 @@ Typename keyword \cite{Web2}
 Reprendre slides : surtout agrégation de stencils
 Overlapped tiling \cite{Art17}
 Variadic templates \cite{Art6}
+Forme des blocs : Diamond Tiling stencil \cite{Art16}
 
 
