--- a/reportMaster2/main.tex
+++ b/reportMaster2/main.tex
@@ -13,9 +13,12 @@
 \geometry{hmargin=3cm,vmargin=3cm}
 
 \usepackage{tikz}
-\usepackage{enumitem}
-\usepackage{subcaption}
+
+\usetikzlibrary{arrows,decorations.pathmorphing,backgrounds,positioning,fit}
+
 \usepackage{amsmath}
+
+\usepackage{floatrow}
 
 \usepackage[backend=biber]{biblatex}
 \addbibresource{art.bib}
