First half of second chapter completed, with a nice pitcure

--- a/reportMaster2/main.tex
+++ b/reportMaster2/main.tex
@@ -14,7 +14,7 @@
 
 \usepackage{tikz}
 
-\usetikzlibrary{arrows,decorations.pathmorphing,backgrounds,positioning,fit}
+\usetikzlibrary{arrows,positioning,fit}
 
 \usepackage{amsmath}
 
