--- a/reportMaster2/art.bib
+++ b/reportMaster2/art.bib
@@ -203,12 +203,8 @@ url =  {http://www.jot.fm/issues/issue_2008_02/article2/}
 }
 
 @article{Art13,
-  author    = {Barthou, Denis and
-               Grosdidier, Gilbert and
-               Kruse, Michael and
-               P{\`{e}}ne, Olivier and
-               Tadonki, Claude},
-  title     = {{QIRAL:} {A} High Level Language for Lattice {QCD} Code Generation},
+  author    = {Barthou, Denis and Grosdidier, Gilbert and Kruse, Michael and P{\`{e}}ne, Olivier and Tadonki, Claude},
+  title     = {QIRAL: A High Level Language for Lattice {QCD} Code Generation},
   journal   = {CoRR},
   volume    = {abs/1208.4035},
   year      = {2012},
@@ -219,15 +215,7 @@ url =  {http://www.jot.fm/issues/issue_2008_02/article2/}
 }
 
 @article{Art14,
-  author    = {Barthou, Denis and
-               Brand{-}Foissac, Olivier and
-               Dolbeau, Romain and
-               Grosdidier, Gilbert and
-               Eisenbeis, Christina and
-               Kruse, Michael and
-               P{\`{e}}ne, Olivier and
-               Petrov, Konstantin and
-               Tadonki, Claude},
+  author    = {Barthou, Denis and Brand{-}Foissac, Olivier and Dolbeau, Romain and Grosdidier, Gilbert and Eisenbeis, Christina and Kruse, Michael and P{\`{e}}ne, Olivier and Petrov, Konstantin and Tadonki, Claude},
   title     = {Automated Code Generation for Lattice Quantum Chromodynamics and beyond},
   journal   = {CoRR},
   volume    = {abs/1401.2039},
